--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,31 +1,13 @@
-<html>
+{% extends 'blog/base.html' %}
 
-  <head>
-    <title>Django Girls blog</title>
-  </head>
-
-  <body>
-    <div>
-      <h1><a href="/">Django Girls blog</a></h1>
-    </div>
-
-    {% for post in posts %}
-      <div>
-        <p>published: {{post.published_date}}</p>
-        <h2><a href="">{{post.title}}</a></h2>
-        <p>{{post.text|linebreaksbr }}</p>
+{% block content %}}
+  {% for post in posts %}
+    <div class="post">
+      <div class="date">
+        <p>published: {{ post.published_date }}</p>
       </div>
-    {% endfor %}
-    <!-- <div>
-      <p>published: 14.06.2014, 12:14</p>
-      <h2><a href="/">My first post</a></h2>
-      <p>Aenean eu leo quam.</p>
-
+      <h2><a href="">{{ post.title }}</a></h2>
+      <p>{{ post.text|linebreaksbr }}</p>
     </div>
-
-    <div>
-      <p>Hi there!</p>
-      <p>It works!</p>
-    </div> -->
-  </body>
-</html>
+  {% endfor %}
+{% endblock %}
