--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -2,10 +2,7 @@
 	color:#C25100;
 	font-family:'Lobster';
 }
-
-body {
-	padding-left: 15px;
-} */
+*/
 
 .page-header {
     background-color: #C25100;
@@ -30,7 +27,10 @@ h1, h2, h3, h4 {
 }
 
 .date {
-    color: #828282;
+    color: #800000;
+    padding-left: 15px;
+    font-family:'Arial';
+
 }
 
 .save {
@@ -53,5 +53,53 @@ h1, h2, h3, h4 {
 }
 
 .post h2 a, .post h2 a:visited {
+    color: #0000FF;
+    font-family:'Arial';
+}
+
+.page-footer {
+  background-color: #C25100;
+  margin-bottom: 0;
+  padding: 50px 50px 50px 50px;
+}
+
+
+
+/* new */
+.post h2 a:hover {
+    color: #00FF00;
+}
+.post h2 a:active {
+    color: #FFFF00;
+}
+
+.btn {
+    padding: 14px 24px;
+    border: 0 none;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin-left: 50px;
+    margin-bottom:50px;
+}
+
+.btn.outline {
+    /* background: none;　 //背景をなしにします */
+    padding: 12px 22px;
+    border: 3px solid #000000;
+    color:#000000;
+}
+
+.btn-primary {
+  background: #3399FF;
+  color:#FFFFFF;
+}
+.btn-primary:hover {
+    background: #0066FF;
+    color: #FFFFFF;
+}
+
+.btn-primary:active {
+    background: #0066FF;
     color: #000000;
 }
