--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+        <!-- <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet" type='text/css'> -->
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
@@ -20,6 +21,18 @@
           </div>
         </div>
       </div>
+
+      <!-- <div class="button"> -->
+      <div>
+        <a class="btn btn-primary" href="/admin" role="button">Link</a>
+        <a class="btn btn-primary" href="/" role="button">Top</a>
+      </div>
+
+      <div class="page-footer">
+
+      </div>
+
+
     </body>
 
 </html>
