--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -24,8 +24,10 @@
 
       <!-- <div class="button"> -->
       <div>
-        <a class="btn btn-primary" href="/admin" role="button">Link</a>
-        <a class="btn btn-primary" href="/" role="button">Top</a>
+        <!-- <a class="btn btn-primary" href="/admin" role="button">Link</a>
+        <a class="btn btn-primary" href="/" role="button">Top</a> -->
+        <a href="/admin" class="btn btn btn-info active" role="button" aria-pressed="true">Link_Admin</a>
+        <a href="/" class="btn btn-primary active" role="button" aria-pressed="true">Top</a>
       </div>
 
       <div class="page-footer">
